add java opts for 7.5