@@ -5,7 +5,7 @@
       -Dfile.encoding=UTF-8 \
       -Djava.awt.headless=true \
       -Dapple.awt.UIElement=true \
-      -Dunifi.core.enabled=false \
+      -XX:+UseParallelGC \
       -XX:+ExitOnOutOfMemoryError \
       -XX:+CrashOnOutOfMemoryError \
       -XX:ErrorFile=/var/lib/unifi/logs/hs_err_pid%p.log \
@@ -13,6 +13,11 @@
       -Dunifi.logdir=/var/lib/unifi/logs \
       -Dunifi.rundir=/var/lib/unifi/run \
       -Dlog4j2.formatMsgNoLookups=true \
+      --add-opens java.base/java.lang=ALL-UNNAMED \
+      --add-opens java.base/java.time=ALL-UNNAMED \
+      --add-opens java.base/sun.security.util=ALL-UNNAMED \
+      --add-opens java.base/java.io=ALL-UNNAMED \
+      --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED \
       -Xmx1024M \
       -XX:+UseParallelGC \
       -jar /usr/lib/unifi/lib/ace.jar start
